mdapipkg/objects/Contact_Skill__c.object
<CustomObject>
    <description>holds the values the members have selected -  this is the junction object between Contact and Contact Skill Option</description>
    <fields>
        <fullName>Active_Contact_Skill__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adhoc_Sub_Category__c</fullName>
        <label>Adhoc Sub Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Skill_Option_ID__c</fullName>
        <label>Contact Skill Option ID</label>
        <referenceTo>Contact_Skill_Option__c</referenceTo>
        <relationshipLabel>Contact Skills</relationshipLabel>
        <relationshipName>Contact_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_on_Contact_Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Skills</relationshipLabel>
        <relationshipName>Contact_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type_Contact_Skill__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expertise</fullName>
                </value>
                <value>
                    <fullName>Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Contact Skill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Contact Skill ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>